// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`existing service page rendering 1`] = `
<div
  className={
    Object {
      "data-css-awku5i": "",
    }
  }
>
  <div
    className="nav ft-ll css-gf15pf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Report a problem
    </a>
    <a
      href="/lookup"
      onClick={[Function]}
    >
      Case look up
    </a>
    <a
      href="/go"
      onClick={[Function]}
    >
      311 on the go
    </a>
    <a
      href="/faq"
      onClick={[Function]}
    >
      FAQ
    </a>
  </div>
  <div
    className={
      Object {
        "data-css-1nvfmj1": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1ldikjo": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1fz8tjx": "",
          }
        }
      >
        <div>
          <div
            className="sh sh--y"
          >
            <h2
              className="sh-title"
            >
              Cosmic Incursion
            </h2>
          </div>
          <div
            className={
              Object {
                "data-css-dgukzt": "",
              }
            }
          >
            
          </div>
          <label>
            <p>
              Please provide any other relevant information:
               
            </p>
            <textarea
              className={
                Object {
                  "data-css-1bm19ha": "",
                }
              }
              name="ST-CMTS"
              onChange={[Function]}
              value=""
            />
          </label>
          <label>
            <p>
              **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
               
            </p>
            <input
              className={
                Object {
                  "data-css-rqg0fb": "",
                }
              }
              name="INFO-CSIRMV1"
              onChange={[Function]}
              type="text"
              value=""
            />
          </label>
          <div>
            <p>
              How many dimensions have been breached?
               
              (required)
            </p>
            <label
              className="ra"
            >
              <input
                checked={false}
                className="ra-f"
                name="SR-CSIRMV1"
                onChange={[Function]}
                type="radio"
                value="One"
              />
              <span
                className="ra-l"
              >
                One
              </span>
            </label>
            <label
              className="ra"
            >
              <input
                checked={false}
                className="ra-f"
                name="SR-CSIRMV1"
                onChange={[Function]}
                type="radio"
                value="Two"
              />
              <span
                className="ra-l"
              >
                Two
              </span>
            </label>
            <label
              className="ra"
            >
              <input
                checked={false}
                className="ra-f"
                name="SR-CSIRMV1"
                onChange={[Function]}
                type="radio"
                value="Three"
              />
              <span
                className="ra-l"
              >
                Three
              </span>
            </label>
            <label
              className="ra"
            >
              <input
                checked={false}
                className="ra-f"
                name="SR-CSIRMV1"
                onChange={[Function]}
                type="radio"
                value="More than Three"
              />
              <span
                className="ra-l"
              >
                More than Three
              </span>
            </label>
          </div>
          <div>
            <button
              disabled={true}
              onClick={[Function]}
            >
              Next
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`missing service page rendering 1`] = `
<div
  className={
    Object {
      "data-css-awku5i": "",
    }
  }
>
  <div
    className="nav ft-ll css-gf15pf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Report a problem
    </a>
    <a
      href="/lookup"
      onClick={[Function]}
    >
      Case look up
    </a>
    <a
      href="/go"
      onClick={[Function]}
    >
      311 on the go
    </a>
    <a
      href="/faq"
      onClick={[Function]}
    >
      FAQ
    </a>
  </div>
  <div
    className={
      Object {
        "data-css-1nvfmj1": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1ldikjo": "",
        }
      }
    >
      <div
        className={
          Object {
            "data-css-1fz8tjx": "",
          }
        }
      >
        <div
          className="sh sh--y"
        >
          <h2
            className="sh-title"
          >
            Service not found
          </h2>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`report form rendering 1`] = `
<div
  className={
    Object {
      "data-css-awku5i": "",
    }
  }
>
  <div
    className="nav ft-ll css-gf15pf"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Report a problem
    </a>
    <a
      href="/lookup"
      onClick={[Function]}
    >
      Case look up
    </a>
    <a
      href="/go"
      onClick={[Function]}
    >
      311 on the go
    </a>
    <a
      href="/faq"
      onClick={[Function]}
    >
      FAQ
    </a>
  </div>
  <div
    className={
      Object {
        "data-css-1nvfmj1": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-1fz8tjx": "",
        }
      }
    >
      <div
        className="sh sh--y"
      >
        <h2
          className="sh-title"
        >
          311: Boston City Services
        </h2>
      </div>
      <div
        className={
          Object {
            "data-css-1xfudx": "",
          }
        }
      >
        <textarea
          className={
            Object {
              "data-css-1kc88za": "",
            }
          }
          defaultValue=""
          name="description"
          onInput={[Function]}
          placeholder="How can we help?"
        />
        <ul
          className={
            Object {
              "data-css-18escyg": "",
            }
          }
        >
          <li
            className={
              Object {
                "data-css-14nloni": "",
              }
            }
          >
            <a
              className={
                Object {
                  "data-css-3br7c8": "",
                }
              }
              href="/report/CSMCINC"
              onClick={[Function]}
            >
              Cosmic Incursion
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
